# zero2prod

./: Cargo.toml  README.md
scripts/: init_db.sh
src/: configurations.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
