[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Lawrence Okegbemi <lawrencebolu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11.20"
once_cell = "1.18.0"


[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.188", features = ["derive"] }
config = { version = "0.13.3" }
uuid = { version = "1.4.1", features = ["v4"]}
chrono = { version = "0.4.30" }
tracing = {version="0.1.37", features = ["log"] }
tracing-log = { version="0.1.3" }
tracing-subscriber = { version="0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.6"
secrecy = { version="0.8.0", features = ["serde"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [ "runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "chrono", "migrate" ]